added promo and partners

--- a/app/index.html
+++ b/app/index.html
@@ -280,7 +280,7 @@
                   </svg></a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating = "3.7">
+            <div class="star" data-rateyo-rating="3.7">
 
             </div>
             <h4 class="product-item__title">
@@ -311,7 +311,7 @@
                   </svg></a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating = "4.3">
+            <div class="star" data-rateyo-rating="4.3">
 
             </div>
             <h4 class="product-item__title">
@@ -321,7 +321,8 @@
               <div class="product-item__new-price">$34.00</div>
               <div class="product-item__old-price">$27.00</div>
             </div>
-          </div><div class="product-item product-item--sale">
+          </div>
+          <div class="product-item product-item--sale">
             <div class="product-item__img-box">
               <img class="product-item__images" src="images/product/3.jpg" alt="product">
               <div class="product-item__link-box">
@@ -341,7 +342,7 @@
                   </svg></a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating = "4">
+            <div class="star" data-rateyo-rating="4">
 
             </div>
             <h4 class="product-item__title">
@@ -351,7 +352,8 @@
               <div class="product-item__new-price">$34.00</div>
               <div class="product-item__old-price">$27.00</div>
             </div>
-          </div><div class="product-item">
+          </div>
+          <div class="product-item">
             <div class="product-item__img-box">
               <img class="product-item__images" src="images/product/4.jpg" alt="product">
               <div class="product-item__link-box">
@@ -371,7 +373,7 @@
                   </svg></a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating = "5">
+            <div class="star" data-rateyo-rating="5">
 
             </div>
             <h4 class="product-item__title">
@@ -381,7 +383,8 @@
               <div class="product-item__new-price">$34.00</div>
               <div class="product-item__old-price">$27.00</div>
             </div>
-          </div><div class="product-item product-item--sale">
+          </div>
+          <div class="product-item product-item--sale">
             <div class="product-item__img-box">
               <img class="product-item__images" src="images/product/5.jpg" alt="product">
               <div class="product-item__link-box">
@@ -401,7 +404,7 @@
                   </svg></a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating = "4.5">
+            <div class="star" data-rateyo-rating="4.5">
 
             </div>
             <h4 class="product-item__title">
@@ -411,7 +414,8 @@
               <div class="product-item__new-price">$34.00</div>
               <div class="product-item__old-price">$27.00</div>
             </div>
-          </div><div class="product-item">
+          </div>
+          <div class="product-item">
             <div class="product-item__img-box">
               <img class="product-item__images" src="images/product/6.jpg" alt="product">
               <div class="product-item__link-box">
@@ -431,7 +435,7 @@
                   </svg></a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating = "4">
+            <div class="star" data-rateyo-rating="4">
 
             </div>
             <h4 class="product-item__title">
@@ -446,6 +450,64 @@
         <a class="product__link" href="#">LOAD MORE</a>
       </div>
     </section>
+    <div class="promo">
+      <div class="container">
+        <div class="promo__inner">
+          <p class="promo__subtitle">
+            Style Fashion
+          </p>
+          <h3 class="title">DEAL OF THE DAY</h3>
+          <div class="promo__clock" data-time="2022-05-25">
+            <div class="promo__clock-item">
+              <span class="promo__days"></span>
+              <div class="promo__text">Days</div>
+            </div>
+            <div class="promo__clock-item">
+              <span class="promo__hours"></span>
+              <div class="promo__text">Hours</div>
+            </div>
+            <div class="promo__clock-item">
+              <span class="promo__minutes"></span>
+              <div class="promo__text">Minutes</div>
+            </div>
+            <div class="promo__clock-item">
+              <span class="promo__seconds"></span>
+              <div class="promo__text">Seconds</div>
+            </div>
+          </div>
+
+          <a class="promo__link" href="#">SHOP NOW</a>
+        </div>
+      </div>
+    </div>
+    <div class="partners">
+      <div class="container">
+
+
+        <ul class="partners__list">
+          <li class="partners__item">
+            <img src="images/partners/1.png" alt="partner logo">
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/2.png" alt="partner logo">
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/3.png" alt="partner logo">
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/4.png" alt="partner logo">
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/5.png" alt="partner logo">
+          </li>
+          <li class="partners__item">
+            <img src="images/partners/6.png" alt="partner logo">
+          </li>
+        </ul>
+      </div>
+    </div>
+
+
 
   </main>
   <footer class="footer">
