--- a/app/index.html
+++ b/app/index.html
@@ -506,7 +506,79 @@
         </ul>
       </div>
     </div>
-
+    <section class="blog">
+      <div class="container">
+        <h3 class="title">FROM OUR BLOG</h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi non vitae recusandae.
+        </p>
+        <div class="blog__items">
+          <div class="blog__item">
+            <a class="blog__item-imglink" href="#">
+              <img src="images/blog/1.jpg" alt="blog image">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-author" href="#">
+                  By Admin
+                </a>
+                <div class="blog__item-date">10 January, 2022</div>
+              </div>
+              <a class="blog__item-titlelink" href="#">
+                <h4 class="blog__item-title">
+                  Our Apps User Use Mobile On His Mobile
+                </h4>
+              </a>
+              <a class="blog__item-link" href="#">
+                Read More
+              </a>
+            </div>
+          </div>
+          <div class="blog__item">
+            <a class="blog__item-imglink" href="#">
+              <img src="images/blog/2.jpg" alt="blog image">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-author" href="#">
+                  By Admin
+                </a>
+                <div class="blog__item-date">10 January, 2022</div>
+              </div>
+              <a class="blog__item-titlelink" href="#">
+                <h4 class="blog__item-title">
+                  Our Apps User Use Mobile On His Mobile
+                </h4>
+              </a>
+              <a class="blog__item-link" href="#">
+                Read More
+              </a>
+            </div>
+          </div>
+          <div class="blog__item">
+            <a class="blog__item-imglink" href="#">
+              <img src="images/blog/3.jpg" alt="blog image">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-author" href="#">
+                  By Admin
+                </a>
+                <div class="blog__item-date">10 January, 2022</div>
+              </div>
+              <a class="blog__item-titlelink" href="#">
+                <h4 class="blog__item-title">
+                  Our Apps User Use Mobile On His Mobile
+                </h4>
+              </a>
+              <a class="blog__item-link" href="#">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
   </main>
